Add event type to mermaid generation

--- a/src/less/rainbow/classDiagram.less
+++ b/src/less/rainbow/classDiagram.less
@@ -5,6 +5,10 @@ g.classGroup text {
   font-size: 8px;
 }
 
+g.classGroup text.eventText {
+  fill: #c72115;
+}
+
 g.classGroup rect.classTitleBox {
   fill: @nodeBorder;
 }
