--- a/src/less/rainbow/classDiagram.less
+++ b/src/less/rainbow/classDiagram.less
@@ -2,20 +2,20 @@ g.classGroup text {
   fill: @nodeBorder;
   stroke: none;
   font-family: 'trebuchet ms', verdana, arial;
-  font-size: 8px;
+  font-size: 16px;
 }
 
 g.classGroup text.eventText {
   fill: #c72115;
 }
 
-g.classGroup rect.classTitleBox {
+g.classGroup path.classTitleBox {
   fill: @nodeBorder;
 }
 
 g.classGroup text.classTitle {
   fill: @nodeTitle;
-  font-size: 10px;
+  font-size: 20px;
 }
 
 g.classGroup rect {
